# es-injector

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/es-injector/: es-injector.h
lib/: CMakeLists.txt  amfi_check_dyld_policy_self_patched.c  inject.cpp
test/: CMakeLists.txt  test-es-injector-exe.c  test-es-injector-lib.c
tools/: CMakeLists.txt  es-injector-util.cpp
